feat(accounts): make batch mark-read asynchronous
